kubernetes/apps/base/security-system/crowdsec/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: crowdsec
  namespace: security-system
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: istio-ingress
      sectionName: https
  hostnames:
    - 'cilium-metabase.${CLUSTER_DOMAIN}'
  rules:
    - backendRefs:
        - name: crowdsec-service
          port: 3000
          weight: 100
