kubernetes/apps/base/security-system/crowdsec/app/virtualservice.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.haydenagencies.com.au/networking.istio.io/virtualservice_v1beta1.json
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: crowdsec
  namespace: security-system
spec:
  hosts:
    - 'metabase.${CLUSTER_DOMAIN}'
  gateways:
    - istio-ingress/istio-ingressgateway
  http:
    - route:
        - destination:
            port:
              number: 3000
            host: crowdsec-service.network-system.svc.cluster.local
          weight: 100
